Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
-
New internal features
~~~~~~~~~~~~~~~~~~~~~
- Added a new "ldap_case_sensitive" option on LDAPBackingDirectory to store the
  information of whether the underlying LDAP sensitive regarding its id field.