@@ -11,3 +11,4 @@ New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - Added a new "ldap_case_sensitive" option on LDAPBackingDirectory to store the
   information of whether the underlying LDAP sensitive regarding its id field.
+- Added a new "enforce_entry_ids_case_sensitivity" option on StackingDirectory.
